# SPDX-License-Identifier: Apache-2.0

[package]
name = "topdown-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Portable Arm topdown performance analysis CLI — self-contained, no Python or perf binary required"

[[bin]]
name = "topdown-tool"
path = "src/main.rs"

[dependencies]
telemetry-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
csv = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
